<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".implem.TrainRerA"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="1dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/alice"
        android:text="Traffic "
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/alice"
        android:layout_marginTop="6dp"
        android:textColor="@color/design_default_color_primary_dark" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:text="De Nanterre-Universite"
        android:fontFamily="@font/alice"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/code"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginStart="5dp"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/alice"
        android:text="Code"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heureT"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginStart="250dp"
        android:layout_marginTop="210dp"
        android:background="@color/black"
        android:fontFamily="@font/alice"
        android:text="heure"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/destination"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_marginStart="50dp"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/alice"
        android:text="Destination"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:fontFamily="@font/alice"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/alice"
        android:layout_marginTop="0dp"
        android:text="Vers Saint-Germain" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="218dp"
        android:fontFamily="@font/alice"
        android:layout_marginTop="5dp"
        android:text="Vers Paris" />

    <TextView
        android:id="@+id/horaire"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/alice"
        android:padding="5dp"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="-229dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="73dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/rera" />

    </LinearLayout>

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/direction"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/alice"
        android:background="@color/red"
        android:ems="10" />

    <LinearLayout
        android:layout_width="417dp"
        android:layout_height="116dp"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="-231dp"
        android:background="#FF8FABE6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/infos" />

        <TextView
            android:id="@+id/info_titre"
            android:layout_width="291dp"
            android:layout_height="22dp"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="61dp"
            android:layout_marginTop="-65dp"
            android:fontFamily="@font/alice"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_message"
            android:layout_width="319dp"
            android:layout_height="82dp"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="61dp"
            android:layout_marginBottom="7dp"
            android:text="Infos sur le traffic"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-55dp"
        android:layout_marginBottom="126dp"
        android:layout_toStartOf="@+id/destination"
        app:srcCompat="@drawable/refresh" />

    <ImageView
        android:id="@+id/echange"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="297dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@mipmap/star" />

    <Spinner
        android:id="@+id/gare"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="Gare favorite"
        android:fontFamily="@font/alice"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/plan"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_alignBottom="@+id/refresh"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="-7dp"
        android:layout_toEndOf="@+id/button2"
        app:srcCompat="@drawable/map" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/echange"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/notif"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/horaire"
        android:layout_marginLeft="340dp"
        android:layout_marginBottom="-170dp"
        app:srcCompat="@drawable/notif" />

    <ImageView
        android:id="@+id/trafficStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView22"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/refresh"
        app:srcCompat="@android:drawable/presence_online" />

</RelativeLayout>