...
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="Prochain départ" />

    <TextView
        android:id="@+id/direction2"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
...
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/refresh2"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-55dp"
        android:layout_marginBottom="116dp"
        android:layout_toStartOf="@+id/destination"
...
