...
    <item
        android:id="@+id/navigation_biblio"
        android:icon="@drawable/bu"
        android:title="BU" />

    <item
        android:id="@+id/navigation_train"
        android:icon="@drawable/train"
        android:title="Train" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/plan"
...
